# wave

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: android.yml  build.yml  frontend.yml  rust.yml
assets/: icon-manifest.json
docs/backend/: README.md  android.md  commands.md  dsp.md  events.md  types.md
scripts/: patch-android-manifest.sh  patch-android-sources.sh  setup-android-signing.sh
src/: App.css  App.tsx
src-tauri/: .gitignore  Cargo.toml  build.rs  cargo-check-out.txt  tauri.conf.json
src-tauri/android-src/: proguard-wave.pro
src-tauri/android-src/java/app/bmdarklight/wave/: FolderPickerCallback.java  MediaMetadataProbe.java  MediaNativeBridge.java  SafMediaScanner.java
src-tauri/android-src/java/app/bmdarklight/wave/audio/: WaveExoPlayer.java
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/android/values/: ic_launcher_background.xml
src-tauri/src/: android_folder_picker.rs  android_import.rs  android_jni.rs  android_media_bridge.rs  app_settings.rs  cli.rs  commands.rs  cover_art.rs  dto.rs  error.rs  gui_tray.rs  lib.rs  library.rs  main.rs  media_controls.rs  metadata.rs  path_validation.rs  playback_daemon.rs  playlist.rs  single_instance.rs
src-tauri/src/android/: import.rs  media_bridge.rs  metadata.rs  mod.rs  saf_scan.rs
src-tauri/src/android/audio/: jni_bridge.rs  mod.rs
src-tauri/src/android/jni/: FolderPickerCallback.kt  folder_picker.rs
src-tauri/src/app/: mod.rs  paths.rs  settings.rs
src-tauri/src/audio/: dsp.rs  eq.rs  mod.rs  player.rs  symphonia_source.rs
src-tauri/src/integrations/: gui_tray.rs  local_art_server.rs  media_controls.rs  mod.rs
src-tauri/src/os_media/: mod.rs  windows.rs
src/components/: AlbumPage.tsx  ArtistPage.tsx
src/utils/: mediaSessionPlugin.ts  platform.ts  player.ts
