[package]
name = "Wave"
version = "0.1.0"
description = "Lightweight Music Player"
authors = ["BMDarkLight"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "wave_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.11", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
# No-op on desktop; Android/iOS MediaSession + media notification.
# Vendored locally (vendor/tauri-plugin-media-session) to add shuffle/repeat
# notification buttons on top of upstream 0.2.4.
tauri-plugin-media-session = { path = "vendor/tauri-plugin-media-session" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rodio = { version = "0.19", features = ["symphonia-all"] }
cpal = "0.15"
rusqlite = { version = "0.32", features = ["bundled"] }
symphonia = { version = "0.5", features = ["all"] }
symphonia-adapter-libopus = "0.2"
uuid = { version = "1", features = ["v4", "serde"] }
walkdir = "2"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
raw-window-handle = "0.6"
base64 = "0.22"
sha2 = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
tokio = "1"
clap = { version = "4", features = ["derive"] }
png = "0.17"
fs4 = { version = "0.12", features = ["sync"] }
windows-sys = { version = "0.60", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(not(target_os = "android"))'.dependencies]
tauri = { version = "2.11", features = ["tray-icon"] }
tray-icon = "0.21"
muda = "0.17"
souvlaki = "0.8"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
objc2-app-kit = "0.3"
objc2-foundation = "0.3"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.44"
features = [
    "Foundation",
    "Media",
    "Storage_Streams",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_WinRT",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
]

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
ndk-context = "0.1"
